# adventofcode

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml  stack.yaml
.github/workflows/: python.yml  rust.yml
haskell/: haskell.cabal  package.yaml
haskell/app/: Main.hs
haskell/src/Lib/: Counter.hs
haskell/src/Year2015/: Day01.hs
haskell/src/Year2019/: Day01.hs  Day02.hs  Day04.hs  Day08.hs
haskell/src/Year2024/: Day01.hs  Day02.hs  Day04.hs  Day07.hs  Day22.hs  Day25.hs
pyaoc/: __init__.py  __main__.py  run.py
pyaoc/solutions/y2015/: y2015d01.py
pyaoc/solutions/y2021/: y2021d19.py  y2021d22.py  y2021d24.py
pyaoc/solutions/y2024/: y2024d02.py  y2024d05.py  y2024d23.py
pyaoc/solutions/y2025/: y2025d06.py  y2025d10.py
rust/y2015/d01/: Cargo.toml  y2015d01.rs
rust/y2018/d23/: Cargo.toml  y2018d23.rs
rust/y2020/d01/: Cargo.toml  y2020d01.rs
rust/y2023/d04/: Cargo.toml  y2023d04.rs
rust/y2024/d03/: Cargo.toml  y2024d03.rs
rust/y2024/d06/: Cargo.toml  y2024d06.rs
rust/y2024/d08/: Cargo.toml  y2024d08.rs
rust/y2024/d09/: Cargo.toml  y2024d09.rs
rust/y2024/d10/: Cargo.toml  y2024d10.rs
rust/y2024/d11/: Cargo.toml  y2024d11.rs
rust/y2024/d12/: Cargo.toml  y2024d12.rs
rust/y2024/d13/: Cargo.toml  y2024d13.rs
rust/y2024/d14/: Cargo.toml  y2024d14.rs
rust/y2024/d15/: Cargo.toml  y2024d15.rs
rust/y2024/d16/: Cargo.toml  y2024d16.rs
rust/y2024/d17/: Cargo.toml  y2024d17.rs
rust/y2024/d18/: Cargo.toml  y2024d18.rs
rust/y2024/d19/: Cargo.toml  y2024d19.rs
rust/y2024/d20/: Cargo.toml  y2024d20.rs
rust/y2024/d21/: Cargo.toml  y2024d21.rs
rust/y2024/d24/: Cargo.toml  y2024d24.rs
rust/y2025/d01/: Cargo.toml  y2025d01.rs
rust/y2025/d02/: Cargo.toml  y2025d02.rs
rust/y2025/d03/: Cargo.toml  y2025d03.rs
rust/y2025/d04/: Cargo.toml  y2025d04.rs
rust/y2025/d05/: Cargo.toml  y2025d05.rs
rust/y2025/d06/: Cargo.toml  y2025d06.rs
rust/y2025/d07/: Cargo.toml  y2025d07.rs
rust/y2025/d08/: Cargo.toml  y2025d08.rs
rust/y2025/d09/: Cargo.toml  y2025d09.rs
rust/y2025/d10/: Cargo.toml  y2025d10.rs
rust/y2025/d11/: Cargo.toml  y2025d11.rs
rust/y2025/d12/: Cargo.toml  y2025d12.rs
src/: main.rs  run.rs  templates.rs
