[workspace]
members = ["rust/y2015/d01", "rust/y2018/d23", "rust/y2020/d01", "rust/y2023/d04", "rust/y2024/d03"]

[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = { version = "4.5.20", features = ["derive"] }
paste = "1.0.15"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
toml_edit = "0.22.22"
y2015d01 = { path = "rust/y2015/d01" }
y2020d01 = { path = "rust/y2020/d01" }
y2023d04 = { path = "rust/y2023/d04" }
y2018d23 = { path = "rust/y2018/d23" }
y2024d03 = { path = "rust/y2024/d03" }
