[workspace]
members = [
    "rust/y2015/d01",
    "rust/y2018/d23",
    "rust/y2020/d01",
    "rust/y2023/d04",
    "rust/y2024/d03",
    "rust/y2024/d06",
    "rust/y2024/d08",
    "rust/y2024/d09",
    "rust/y2024/d10",
    "rust/y2024/d11",
    "rust/y2024/d12",
    "rust/y2024/d13",
    "rust/y2024/d14",
    "rust/y2024/d15",
    "rust/y2024/d16", "rust/y2024/d17",
    "rust/y2024/d18",
    "rust/y2024/d19",
    "rust/y2024/d20",
    "rust/y2024/d21",
    "rust/y2024/d24", "rust/y2025/d01", "rust/y2025/d02", "rust/y2025/d03", "rust/y2025/d04", "rust/y2025/d05", "rust/y2025/d06", "rust/y2025/d07", "rust/y2025/d08", "rust/y2025/d09", "rust/y2025/d10", "rust/y2025/d11",
]

[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = { version = "4.5.20", features = ["derive"] }
paste = "1.0.15"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
toml_edit = "0.22.22"
strum = { version = "0.26.3", features = ["derive"] }
y2015d01 = { path = "rust/y2015/d01" }
y2020d01 = { path = "rust/y2020/d01" }
y2023d04 = { path = "rust/y2023/d04" }
y2018d23 = { path = "rust/y2018/d23" }
y2024d03 = { path = "rust/y2024/d03" }
y2024d06 = { path = "rust/y2024/d06" }
y2024d08 = { path = "rust/y2024/d08" }
y2024d09 = { path = "rust/y2024/d09" }
y2024d10 = { path = "rust/y2024/d10" }
y2024d11 = { path = "rust/y2024/d11" }
y2024d12 = { path = "rust/y2024/d12" }
y2024d13 = { path = "rust/y2024/d13" }
y2024d14 = { path = "rust/y2024/d14" }
y2024d18 = { path = "rust/y2024/d18" }
y2024d15 = { path = "rust/y2024/d15" }
y2024d19 = { path = "rust/y2024/d19" }
y2024d20 = { path = "rust/y2024/d20" }
y2024d21 = { path = "rust/y2024/d21" }
y2024d24 = { path = "rust/y2024/d24" }
y2024d16 = { path = "rust/y2024/d16" }
y2024d17 = { path = "rust/y2024/d17" }
y2025d01 = { path = "rust/y2025/d01" }
y2025d02 = { path = "rust/y2025/d02" }
y2025d03 = { path = "rust/y2025/d03" }
y2025d04 = { path = "rust/y2025/d04" }
y2025d05 = { path = "rust/y2025/d05" }
y2025d06 = { path = "rust/y2025/d06" }
y2025d07 = { path = "rust/y2025/d07" }
y2025d08 = { path = "rust/y2025/d08" }
y2025d09 = { path = "rust/y2025/d09" }
y2025d10 = { path = "rust/y2025/d10" }
y2025d11 = { path = "rust/y2025/d11" }
