[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy[install-types]>=1.13.0",
    "networkx>=3.4.2",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
    "tqdm>=4.67.0",
]

[tool.ruff.lint]
select = ["A", "B", "C", "E", "F", "FA", "I", "N", "T", "UP"]
ignore = ["N818", "B905"]

[tool.ruff.lint.per-file-ignores]
"pyaoc/run.py" = ["T"]
